--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <script src ="js/p5.js"></script>
 
 </head>
@@ -15,7 +15,7 @@
    
    
    <div class="sketch">
-    <script src ="js/sketch1.js"></script>
+    <script src ="sketch1.js"></script>
     </div>
   
     <div class="again"> <a href="page1.html">GO AGAIN</a>
