--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src ="js/p5.js"></script>
     </head>
@@ -16,7 +16,7 @@
         </h2> -->
        
             <div class="sketch"></div>
-            <script src ="js/sketch2.js"></script>
+            <script src ="sketch2.js"></script>
             
 
                 <div class="again"> <a href="page2.html">GO AGAIN</a>
