--- a/page3.html
+++ b/page3.html
@@ -3,9 +3,9 @@
 
     <head>
         <meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src ="js/p5.js"></script>
+        <script src ="p5.js"></script>
     </head>
 
     <body>
@@ -16,7 +16,7 @@
         </h1> -->
         
         <div class="sketch">
-            <script src ="js/sketch3.js"></script>
+            <script src ="sketch3.js"></script>
             </div>
           
             <!-- <div class="again1"> <a href="page3.html">GO AGAIN</a>
