--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src ="js/p5.js"></script>
+        <script src ="p5.js"></script>
     </head>
 
    
